<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>jp.sourceforge.hotchpotch</groupId>
  <artifactId>coopie</artifactId>
  <packaging>jar</packaging>
  <name>coopie</name>
  <version>0.1.6</version>
  <description />
  <url>http://hotchpotch.sourceforge.jp/</url>
  <inceptionYear>2010</inceptionYear>

  <scm>
    <connection>scm:svn:http://svn.sourceforge.jp/svnroot/hotchpotch/dev/trunk/coopie/</connection>
    <!-- svn+ssh://svn.sourceforge.jp/svnroot/hotchpotch/dev/trunk/coopie -->
    <developerConnection>scm:svn:https://svn.sourceforge.jp/svnroot/hotchpotch/dev/trunk/coopie/</developerConnection>
    <url>http://svn.sourceforge.jp/svnroot/hotchpotch/dev/trunk/coopie/</url>
  </scm>

  <build>
    <defaultGoal>validate</defaultGoal>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <configuration>
            <updateReleaseInfo>true</updateReleaseInfo>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <includes>
              <include>**/*Test.java</include>
            </includes>
            <!--
            <argLine>
              -Xmx384m -XX:PermSize=128m -XX:MaxPermSize=256m
            </argLine>
             -->
            <disableXmlReport>true</disableXmlReport>
            <failIfNoTests>false</failIfNoTests>
            <redirectTestOutputToFile>true</redirectTestOutputToFile>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-eclipse-plugin</artifactId>
        <configuration>
          <outputDirectory>build/classes</outputDirectory>
          <downloadSources>true</downloadSources>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.1.2</version>
        <executions>
          <execution>
            <id>source-jar</id>
            <phase>package</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <SCM-Revision>${buildNumber}</SCM-Revision>
              <Built-Timestamp>${timestamp}</Built-Timestamp>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>buildnumber-maven-plugin</artifactId>
        <executions>
          <execution>
            <phase>prepare-package</phase>
            <goals>
              <goal>create</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <doCheck>true</doCheck>
          <doUpdate>true</doUpdate>
          <timestampFormat>{0,date,yyyy/MM/dd HH:mm:ss.SSS Z (z)}</timestampFormat>
          <!--
          <providerImplementations>
            <svn>javasvn</svn>
          </providerImplementations>
          -->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <SCM-Revision>${buildNumber}</SCM-Revision>
              <Built-Timestamp>${timestamp}</Built-Timestamp>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>maven.t2framework.org</id>
      <name>The T2 Project Maven2 Repository</name>
      <url>http://maven.t2framework.org/maven2</url>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <uniqueVersion>false</uniqueVersion>
      <id>hotchpotch.sourceforge.jp</id>
      <name>hotchpotch.sourceforge.jp</name>
      <url>${distribution.release.url}</url>
    </repository>
    <snapshotRepository>
      <uniqueVersion>true</uniqueVersion>
      <id>hotchpotch.sourceforge.jp</id>
      <name>hotchpotch.sourceforge.jp snapshot</name>
      <url>${distribution.snapshot.url}</url>
    </snapshotRepository>
  </distributionManagement>

  <dependencies>
    <dependency>
      <groupId>org.t2framework.commons</groupId>
      <artifactId>commons</artifactId>
      <version>0.6.7-ga</version>
      <exclusions>
        <exclusion>
          <groupId>ch.qos.logback</groupId>
          <artifactId>logback-core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>ch.qos.logback</groupId>
          <artifactId>logback-classic</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>net.sf.opencsv</groupId>
      <artifactId>opencsv</artifactId>
      <version>2.1</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>${logback.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>3.1-FINAL</version>
      <optional>true</optional>
      <exclusions>
        <exclusion>
          <groupId>avalon-framework</groupId>
          <artifactId>avalon-framework</artifactId>
        </exclusion>
        <exclusion>
          <groupId>log4j</groupId>
          <artifactId>log4j</artifactId>
        </exclusion>
        <exclusion>
          <groupId>logkit</groupId>
          <artifactId>logkit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit-addons</groupId>
      <artifactId>junit-addons</artifactId>
      <version>1.4</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>junit-addons</groupId>
          <artifactId>junit-addons-runner</artifactId>
        </exclusion>
        <exclusion>
          <groupId>xerces</groupId>
          <artifactId>xercesImpl</artifactId>
        </exclusion>
        <exclusion>
          <groupId>xerces</groupId>
          <artifactId>xmlParserAPIs</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>

  <properties>
    <slf4j.version>1.6.1</slf4j.version>
    <logback.version>0.9.24</logback.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <distribution.release.url>file:///C:/project/coopie/maven2/release</distribution.release.url>
    <distribution.snapshot.url>scp://shell.sourceforge.jp/home/groups/h/ho/hotchpotch/htdocs/maven2/snapshot</distribution.snapshot.url>
  </properties>

</project>
